--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "babel-loader": "^9.1.2",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-no-smart-quotes": "^1.3.0",
