--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,8 @@
     "allowJs": true,
     "moduleResolution": "node",
     "traceResolution": false,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "paths": {
       "~/*": ["src/*"]
     }
