--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^2.9.11",
     "@iconify/react": "^4.1.0",
     "@mui/lab": "^5.0.0-alpha.120",
     "@mui/material": "^5.11.9",
@@ -21,9 +22,11 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "^12.2.0",
+    "react-hook-form": "^7.43.5",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
